# Tracking-frequent-items-in-data-streams

DataCleaning/: Clean Experiment Data.Rmd  Create Experiment Data.Rmd  Data_cleaningStream.Rmd  FixNullError.Rmd
ProcessedData/: experiment_data_03_25_clean_words_with_freq.csv  validation_data_clean2.csv  validation_data_clean_words.csv
ResultData/: countMedianSketch.csv  countMedianSketchConstantDelta.csv  countMedianSketchConstantDelta2.csv  countMedianSketchConstantDelta3.csv  countMedianSketchConstantDelta_11.csv  countMedianSketchConstantEps.csv  countMedianSketchConstantEps1.csv  countMedianSketchConstantEps2.csv  countMedianSketchConstantEps3.csv  countMinLearnSketchConstantDelta.csv  countMinLearnSketchConstantDelta_11.csv  countMinLearnSketchConstantEps.csv  countMinSketch.csv  countMinSketchConstantDelta.csv  countMinSketchConstantDelta2.csv  countMinSketchConstantDelta_11.csv  countMinSketchConstantEps.csv  countMinSketchConstantEps1.csv  countMinSketchConstantEps2.csv  countMinSketchConstantEps3.csv  countMinSketchConstantEps_delta_0_002.csv  countSketchLearnSketchConstantDelta.csv  countSketchLearnSketchConstantDelta_11.csv  heavyHitter.csv  (+1 more)
c++_files/: CMakeLists.txt  CountMinLearnExperiment.cpp  HeavyHitter.cpp  HeavyHitter.h  HeavyHitterCormode.cpp  HeavyHitterCormode.h  HeavyHitterExperiment1.cpp  HeavyHitterExperimentCormode.cpp  cMinExperiment.cpp  cSketchExperiment.cpp  countMin.cpp  countMin.h  countMinLearn.cpp  countMinLearn.h  countSketch.cpp  countSketch.h  countSketchLearn.cpp  countSketchLearn.h  countSketchLearnExperiment.cpp  main.cpp
(+8 files in other folders)
